test/testData/parser/negative/expressions/ternaryOp.err
test/testData/parser/negative/expressions/ternaryOp.c:10:18: error: incompatible operand types ('signed int' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:22: error: incompatible operand types ('float' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:10:23: error: incompatible operand types ('float' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:10:24: error: incompatible operand types ('float' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:10:25: error: incompatible operand types ('float' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:26: error: incompatible operand types ('float' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:28: error: incompatible operand types ('*signed int' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:10:32: error: incompatible operand types ('*signed int' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:35: error: incompatible operand types ('*float' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:10:39: error: incompatible operand types ('*float' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:42: error: incompatible operand types ('signed int[20]' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:10:46: error: incompatible operand types ('signed int[20]' and 'STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:48: error: incompatible operand types ('STRUCT S' and 'signed int')
test/testData/parser/negative/expressions/ternaryOp.c:10:49: error: incompatible operand types ('STRUCT S' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:10:50: error: incompatible operand types ('STRUCT S' and '*signed int')
test/testData/parser/negative/expressions/ternaryOp.c:10:51: error: incompatible operand types ('STRUCT S' and '*float')
test/testData/parser/negative/expressions/ternaryOp.c:10:52: error: incompatible operand types ('STRUCT S' and 'signed int[20]')
test/testData/parser/negative/expressions/ternaryOp.c:10:54: error: incompatible operand types ('STRUCT S' and '*STRUCT S')
test/testData/parser/negative/expressions/ternaryOp.c:10:56: error: incompatible operand types ('*STRUCT S' and 'float')
test/testData/parser/negative/expressions/ternaryOp.c:10:60: error: incompatible operand types ('*STRUCT S' and 'STRUCT S')
